2002-05-28  Kenichi SATO <ksato@iijmio-mail.jp>

	* sb-zdnet.el (shimbun-zdnet-group-url-alist): Abolishded.
	(shimbun-zdnet-group-alist): New variable.
	(shimbun-zdnet-groups): Refer `shimbun-zdnet-group-alist'.
	(shimbun-index-url): Ditto.
	(shimbun-zdnet-content-end): Relaxed.
	(shimbun-zdnet-comp-get-headers): Removed.
	(shimbun-zdnet-gamespot-get-headers): Ditto.
	(shimbun-get-headers): Reimplemented.
	(shimbun-make-contents): Remove links and images at
	`ad.zdnet.co.jp'.

2002-05-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-geocrawler.el (shimbun-geocrawler-add-group): Clean up.

2002-05-28  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-e21.el (w3m-ucs-to-char): New function.

	* w3m-xmas.el (w3m-ucs-to-char): New function for XEmacs-21.5.

2002-05-28  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* shimbun/sb-makanai.el (shimbun-makanai-scan-articles): Follow
	the change of the Web site.

2002-05-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-geocrawler.el (shimbun-geocrawler-group-alist):
	Changed its default value.
	(shimbun-index-url): Fix typo.
	(shimbun-geocrawler-add-group): New command.

2002-05-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-header-insert): Insert `Reply-To'
	header.

	* shimbun/sb-geocrawler.el: New file.

2002-05-26  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-kde.el: New file.

2002-05-23  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-zdnet.el (shimbun-zdnet-group-url-alist): Changed URL of
	"comp".
	(shimbun-zdnet-expiration-days): New variable.
	(shimbun-zdnet-comp-get-headers): Follow the change of page.

2002-05-20  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-nikkei.el (shimbun-nikkei-groups): Add `main'.

2002-05-20  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmfan.el (shimbun-palmfan-palmwarefan-headers):
	Modify regexp to pick up price from BODY for working around.

2002-05-20  Katsumi Yamaoka  <yamaoka@jpl.org>
